[gd_scene load_steps=81 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/model/player.glb" type="PackedScene" id=2]
[ext_resource path="res://player/crosshair.png" type="Texture" id=3]
[ext_resource path="res://player/audio/step_random_pitch.tres" type="AudioStream" id=4]
[ext_resource path="res://player/audio/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://player/audio/land.wav" type="AudioStream" id=6]
[ext_resource path="res://player/audio/shoot.wav" type="AudioStream" id=7]
[ext_resource path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" type="Script" id=8]
[ext_resource path="res://player/bullet/bullet_material.tres" type="Material" id=9]
[ext_resource path="res://player/model/muzzle_flash_particle_mesh_Cone.mesh" type="ArrayMesh" id=10]
[ext_resource path="res://player/bullet/effect/FlarePolar.png" type="Texture" id=11]
[ext_resource path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" type="Script" id=12]
[ext_resource path="res://addons/imjp94.yafsm/src/states/State.gd" type="Script" id=13]
[ext_resource path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" type="Script" id=14]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" type="Script" id=15]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/BooleanCondition.gd" type="Script" id=16]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/FloatCondition.gd" type="Script" id=17]

[sub_resource type="SphereMesh" id=2]
radius = 0.003
height = 0.02

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_cull_mode = 2
albedo_texture = ExtResource( 11 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.791139, 0.990909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.325926, 1 )
colors = PoolColorArray( 0.0507812, 0.955505, 1, 1, 0.875, 0.888672, 1, 0.305882 )

[sub_resource type="AnimationNodeAdd3" id=9]
resource_local_to_scene = true
filter_enabled = true
filters = [ "Robot_Skeleton/Skeleton:neck.001", "Robot_Skeleton/Skeleton:upper_arm.R" ]

[sub_resource type="AnimationNodeAnimation" id=10]
resource_local_to_scene = true
animation = "AIM-Down"

[sub_resource type="AnimationNodeAnimation" id=11]
resource_local_to_scene = true
animation = "AIM-Up"

[sub_resource type="AnimationNodeBlend2" id=12]
resource_local_to_scene = true
filter_enabled = true
filters = [ "Robot_Skeleton/Skeleton:eyelid.d.L", "Robot_Skeleton/Skeleton:eyelid.d.R", "Robot_Skeleton/Skeleton:eyelid.u.L", "Robot_Skeleton/Skeleton:eyelid.u.R", "Robot_Skeleton/Skeleton:eyes" ]

[sub_resource type="AnimationNodeAnimation" id=13]
resource_local_to_scene = true
animation = "eyes-cycle"

[sub_resource type="AnimationNodeAnimation" id=14]
resource_local_to_scene = true
animation = "jump_5_hardlanding"

[sub_resource type="AnimationNodeAnimation" id=15]
resource_local_to_scene = true
animation = "jump_4_falling-cycle"

[sub_resource type="AnimationNodeAnimation" id=16]
resource_local_to_scene = true
animation = "jump_2_upwards-cycle"

[sub_resource type="AnimationNodeOneShot" id=17]
resource_local_to_scene = true
fadein_time = 0.25
fadeout_time = 0.25
autorestart_random_delay = 1.0

[sub_resource type="AnimationNodeTransition" id=18]
resource_local_to_scene = true
input_count = 4
xfade_time = 0.15
input_0/name = "strafe"
input_0/auto_advance = false
input_1/name = "walk"
input_1/auto_advance = false
input_2/name = "jump_up"
input_2/auto_advance = false
input_3/name = "jump_down"
input_3/auto_advance = false

[sub_resource type="AnimationNodeAnimation" id=19]
resource_local_to_scene = true
animation = "strafe_left-cycle"

[sub_resource type="AnimationNodeAnimation" id=20]
resource_local_to_scene = true
animation = "strafe_right-cycle"

[sub_resource type="AnimationNodeAnimation" id=21]
resource_local_to_scene = true
animation = "strafe_back-cycle"

[sub_resource type="AnimationNodeAnimation" id=22]
resource_local_to_scene = true
animation = "strafe_front-cycle"

[sub_resource type="AnimationNodeAnimation" id=23]
resource_local_to_scene = true
animation = "Idlecombat-cycle"

[sub_resource type="AnimationNodeBlendSpace2D" id=24]
resource_local_to_scene = true
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( 0, 1 )
blend_point_4/node = SubResource( 23 )
blend_point_4/pos = Vector2( 0, 0 )

[sub_resource type="AnimationNodeAnimation" id=25]
resource_local_to_scene = true
animation = "Idle-cycle"

[sub_resource type="AnimationNodeAnimation" id=26]
resource_local_to_scene = true
animation = "running_nogun-cycle"

[sub_resource type="AnimationNodeAnimation" id=27]
resource_local_to_scene = true
animation = "running_gun-cycle"

[sub_resource type="AnimationNodeAnimation" id=28]
resource_local_to_scene = true
animation = "Idlecombat-cycle"

[sub_resource type="AnimationNodeBlendSpace2D" id=29]
resource_local_to_scene = true
blend_point_0/node = SubResource( 25 )
blend_point_0/pos = Vector2( 0, 0 )
blend_point_1/node = SubResource( 26 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 27 )
blend_point_2/pos = Vector2( 1, 1 )
blend_point_3/node = SubResource( 28 )
blend_point_3/pos = Vector2( 0, 1 )
min_space = Vector2( 0, 0 )
x_label = "speed"
y_label = "gun"

[sub_resource type="AnimationNodeBlendTree" id=30]
resource_local_to_scene = true
graph_offset = Vector2( -454.854, -75.2591 )
nodes/aim/node = SubResource( 9 )
nodes/aim/position = Vector2( 380, 120 )
nodes/aimdown/node = SubResource( 10 )
nodes/aimdown/position = Vector2( 120, 60 )
nodes/aimup/node = SubResource( 11 )
nodes/aimup/position = Vector2( 140, 380 )
nodes/eye_blend/node = SubResource( 12 )
nodes/eye_blend/position = Vector2( 640, 120 )
nodes/eyes/node = SubResource( 13 )
nodes/eyes/position = Vector2( 380, 360 )
nodes/hardland/node = SubResource( 14 )
nodes/hardland/position = Vector2( -160, 340 )
nodes/jumpdown/node = SubResource( 15 )
nodes/jumpdown/position = Vector2( -460, 320 )
nodes/jumpup/node = SubResource( 16 )
nodes/jumpup/position = Vector2( -480, 200 )
nodes/land/node = SubResource( 17 )
nodes/land/position = Vector2( 120, 180 )
nodes/output/position = Vector2( 840, 120 )
nodes/state/node = SubResource( 18 )
nodes/state/position = Vector2( -120, 120 )
nodes/strafe/node = SubResource( 24 )
nodes/strafe/position = Vector2( -400, -120 )
nodes/walk/node = SubResource( 29 )
nodes/walk/position = Vector2( -400, 40 )
node_connections = [ "state", 0, "strafe", "state", 1, "walk", "state", 2, "jumpup", "state", 3, "jumpdown", "output", 0, "eye_blend", "aim", 0, "aimdown", "aim", 1, "land", "aim", 2, "aimup", "eye_blend", 0, "aim", "eye_blend", 1, "eyes", "land", 0, "state", "land", 1, "hardland" ]

[sub_resource type="CapsuleShape" id=31]
radius = 0.5
height = 0.6

[sub_resource type="RayShape" id=32]

[sub_resource type="AudioStreamRandomPitch" id=35]
audio_stream = ExtResource( 7 )

[sub_resource type="Resource" id=45]
script = ExtResource( 13 )
__meta__ = {
"graph_offset": Vector2( 342, 434.5 )
}
name = "Aiming"

[sub_resource type="Resource" id=37]
script = ExtResource( 13 )
__meta__ = {
"graph_offset": Vector2( 570, 554.5 )
}
name = "Entry"

[sub_resource type="Resource" id=36]
script = ExtResource( 13 )
__meta__ = {
"graph_offset": Vector2( 410, 74.5 )
}
name = "Idle"

[sub_resource type="Resource" id=41]
script = ExtResource( 13 )
__meta__ = {
"graph_offset": Vector2( 810, -45.5 )
}
name = "Jump"

[sub_resource type="Resource" id=56]
script = ExtResource( 13 )
__meta__ = {
"graph_offset": Vector2( 900, 274.5 )
}
name = "Landed"

[sub_resource type="Resource" id=42]
script = ExtResource( 13 )
__meta__ = {
"graph_offset": Vector2( 310, -105.5 )
}
name = "Move"

[sub_resource type="Resource" id=43]
script = ExtResource( 13 )
__meta__ = {
"graph_offset": Vector2( 1267, 194.5 )
}
name = "On Air"

[sub_resource type="Resource" id=44]
script = ExtResource( 13 )
__meta__ = {
"graph_offset": Vector2( -110.5, 34.5 )
}
name = "Shooting"

[sub_resource type="Resource" id=39]
script = ExtResource( 14 )
from = "Entry"
to = "Idle"
conditions = {
}

[sub_resource type="Resource" id=57]
script = ExtResource( 15 )
name = "jump"

[sub_resource type="Resource" id=46]
script = ExtResource( 14 )
from = "Idle"
to = "Jump"
conditions = {
"jump": SubResource( 57 )
}

[sub_resource type="Resource" id=58]
script = ExtResource( 15 )
name = "move"

[sub_resource type="Resource" id=47]
script = ExtResource( 14 )
from = "Idle"
to = "Move"
conditions = {
"move": SubResource( 58 )
}

[sub_resource type="Resource" id=71]
script = ExtResource( 15 )
name = "aim"

[sub_resource type="Resource" id=72]
script = ExtResource( 14 )
from = "Idle"
to = "Aiming"
conditions = {
"aim": SubResource( 71 )
}

[sub_resource type="Resource" id=67]
script = ExtResource( 16 )
name = "on_floor"
comparation = 0
value = false

[sub_resource type="Resource" id=48]
script = ExtResource( 14 )
from = "Jump"
to = "On Air"
conditions = {
"on_floor": SubResource( 67 )
}

[sub_resource type="Resource" id=68]
script = ExtResource( 16 )
name = "on_floor"
comparation = 0
value = true

[sub_resource type="Resource" id=64]
script = ExtResource( 14 )
from = "Landed"
to = "Idle"
conditions = {
"on_floor": SubResource( 68 )
}

[sub_resource type="Resource" id=61]
script = ExtResource( 15 )
name = "stop"

[sub_resource type="Resource" id=62]
script = ExtResource( 14 )
from = "Move"
to = "Idle"
conditions = {
"stop": SubResource( 61 )
}

[sub_resource type="Resource" id=59]
script = ExtResource( 15 )
name = "jump"

[sub_resource type="Resource" id=60]
script = ExtResource( 14 )
from = "Move"
to = "Jump"
conditions = {
"jump": SubResource( 59 )
}

[sub_resource type="Resource" id=73]
script = ExtResource( 15 )
name = "aim"

[sub_resource type="Resource" id=74]
script = ExtResource( 14 )
from = "Move"
to = "Aiming"
conditions = {
"aim": SubResource( 73 )
}

[sub_resource type="Resource" id=66]
script = ExtResource( 16 )
name = "on_floor"
comparation = 0
value = true

[sub_resource type="Resource" id=63]
script = ExtResource( 14 )
from = "On Air"
to = "Landed"
conditions = {
"on_floor": SubResource( 66 )
}

[sub_resource type="Resource" id=69]
script = ExtResource( 15 )
name = "shoot"

[sub_resource type="Resource" id=76]
script = ExtResource( 17 )
name = "fire_cooldown"
comparation = 5
value = 0.0

[sub_resource type="Resource" id=70]
script = ExtResource( 14 )
from = "Aiming"
to = "Shooting"
conditions = {
"fire_cooldown": SubResource( 76 ),
"shoot": SubResource( 69 )
}

[sub_resource type="Resource" id=77]
script = ExtResource( 15 )
name = "jump"

[sub_resource type="Resource" id=78]
script = ExtResource( 14 )
from = "Aiming"
to = "Jump"
conditions = {
"jump": SubResource( 77 )
}

[sub_resource type="Resource" id=75]
script = ExtResource( 14 )
from = "Shooting"
to = "Idle"
conditions = {
}

[sub_resource type="Resource" id=40]
script = ExtResource( 8 )
name = ""
states = {
"Aiming": SubResource( 45 ),
"Entry": SubResource( 37 ),
"Idle": SubResource( 36 ),
"Jump": SubResource( 41 ),
"Landed": SubResource( 56 ),
"Move": SubResource( 42 ),
"On Air": SubResource( 43 ),
"Shooting": SubResource( 44 )
}
transitions = {
"Aiming": {
"Jump": SubResource( 78 ),
"Shooting": SubResource( 70 )
},
"Entry": {
"Idle": SubResource( 39 )
},
"Idle": {
"Aiming": SubResource( 72 ),
"Jump": SubResource( 46 ),
"Move": SubResource( 47 )
},
"Jump": {
"On Air": SubResource( 48 )
},
"Landed": {
"Idle": SubResource( 64 )
},
"Move": {
"Aiming": SubResource( 74 ),
"Idle": SubResource( 62 ),
"Jump": SubResource( 60 )
},
"On Air": {
"Landed": SubResource( 63 )
},
"Shooting": {
"Idle": SubResource( 75 )
}
}

[node name="Player" type="KinematicBody"]
collision_layer = 6
collision_mask = 7
script = ExtResource( 1 )

[node name="PlayerModel" parent="." instance=ExtResource( 2 )]

[node name="Robot_Skeleton" parent="PlayerModel" index="0"]
transform = Transform( 0.803991, 0, 0, 0, 0.803991, 0, 0, 0, 0.803991, 0, 0, 0 )

[node name="Skeleton" parent="PlayerModel/Robot_Skeleton" index="0"]
bones/55/bound_children = [ NodePath("GunBone") ]

[node name="GunBone" type="BoneAttachment" parent="PlayerModel/Robot_Skeleton/Skeleton" index="5"]
transform = Transform( 0.922986, -0.38269, -0.0431454, -0.0242296, 0.0541226, -0.998247, 0.3844, 0.92229, 0.0406773, -0.206156, 1.3832, 0.503792 )
bone_name = "hand.R"

[node name="ShootFrom" type="Position3D" parent="PlayerModel/Robot_Skeleton/Skeleton/GunBone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )

[node name="ShootParticle" type="CPUParticles" parent="PlayerModel/Robot_Skeleton/Skeleton/GunBone/ShootFrom"]
transform = Transform( 1, 2.04891e-08, 0, 3.21306e-08, 1, 5.58794e-09, 0, 0, 1, 0, 0, 0 )
material_override = ExtResource( 9 )
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
explosiveness = 0.79
local_coords = false
mesh = SubResource( 2 )
flag_align_y = true
direction = Vector3( 0, 0, -1 )
spread = 15.0
gravity = Vector3( 0, -3, 0 )
initial_velocity = 3.0

[node name="MuzzleFlash" type="CPUParticles" parent="PlayerModel/Robot_Skeleton/Skeleton/GunBone/ShootFrom"]
transform = Transform( 1, 0, -2.00234e-08, 1.21072e-08, -4.37722e-08, -1, -2.98023e-08, 1, -4.74975e-08, 0, 0, 0 )
material_override = SubResource( 3 )
emitting = false
amount = 1
lifetime = 0.1
one_shot = true
explosiveness = 1.0
mesh = ExtResource( 10 )
gravity = Vector3( 0, 0, 0 )
angle = -4.0
angle_random = 1.0
scale_amount = 0.3
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[node name="RootMotionView" type="RootMotionView" parent="."]
animation_path = NodePath("../AnimationTree")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 30 )
anim_player = NodePath("../PlayerModel/AnimationPlayer")
active = true
root_motion_track = NodePath("Robot_Skeleton/Skeleton:root")
parameters/aim/add_amount = 0
parameters/eye_blend/blend_amount = 1.0
parameters/land/active = false
parameters/state/current = 0
parameters/strafe/blend_position = Vector2( 0, 0 )
parameters/walk/blend_position = Vector2( 0, 0 )

[node name="CapsuleShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 31 )

[node name="RayShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.00357, 0 )
shape = SubResource( 32 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Crosshair" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffects" type="Node" parent="."]

[node name="Step" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 4 )

[node name="Jump" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 5 )

[node name="Land" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 6 )

[node name="Shoot" type="AudioStreamPlayer" parent="SoundEffects"]
stream = SubResource( 35 )

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[node name="State" type="Node" parent="."]
script = ExtResource( 12 )
state_machine = SubResource( 40 )

[connection signal="transited" from="State" to="." method="_on_StatePlayer_transited"]

[editable path="PlayerModel"]
